Fix the text file collectore setup
I broke the default textfile collector settings of the distribution.
The smartmon collection did no longer work because I overrode the
default collector directory. Instead of using a custom directory the
offsitze backuzp reporting uses the default directory.

This fixes the smart and apt monitoring.

--- a/roles/offsite-backup/templates/backup-job.j2
+++ b/roles/offsite-backup/templates/backup-job.j2
@@ -10,8 +10,8 @@ out=$(op run -- duplicity \
 
 backup_code=$?
 
-if hash duplicity_prometheus.py 2> /dev/null && [ -d "/var/lib/node_exporter" ]; then
-  echo "$out" | duplicity_prometheus.py --source "{{item.src}}" | sponge "/var/lib/node_exporter/duplicity_$job.prom"
+if hash duplicity_prometheus.py 2> /dev/null && [ -d "/var/lib/prometheus/node-exporter" ]; then
+  echo "$out" | duplicity_prometheus.py --source "{{item.src}}" | sponge "/var/lib/prometheus/node-exporter/duplicity_$job.prom"
 fi
 
 if [ $backup_code -gt 0 ]; then
