--- a/roles/container-proxy/templates/index.html.j2
+++ b/roles/container-proxy/templates/index.html.j2
@@ -1,13 +1,92 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Container Proxy Index</title>
-    </head>
-    <body>
-        <ul>
-            {% for route in container_proxy_routes %}
-            <li><a href="{{ route.path }}">{{ route.path }}</a></li>
-            {% endfor %}
-        </ul>
-    </body>
+<head>
+    <title>Container Proxy Index</title>
+    <style>
+        :root {
+            --layout-gap: 20px;
+        }
+        @media (prefers-color-scheme: light) {
+            /* this needs work, looks a bit "off" */
+            body {
+                background-color: #fdf6e3;
+                color: #657b83;
+            }
+            .card {
+                background: #eee8d5;
+                color: #657b83;
+                border-color: #657b83;
+            }
+            .card:hover {
+                background: #fdf6e3;
+            }
+        }
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #002b36;
+                color: #fdf6e3;
+            }
+            .card {
+                background: #eee8d5;
+                color: #073642;
+                border-color: #073642;
+            }
+            .card:hover {
+                background: #fdf6e3;
+            }
+        }
+
+        body {
+            font-family: sans-serif;
+        }
+        a {
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .cards-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        .card {
+            min-width: 200px;
+            height: 200px;
+            border: 1px solid;
+            border-radius: 5px;
+            padding: 10px;
+            flex: 1 1 calc(33% - var(--layout-gap)*2);
+            display: flex;
+            flex-direction: column;
+            align-content: center;
+            justify-content: center;
+        }
+        @media screen and (max-device-width: 600px) {
+            .card {
+                flex: 1 1 100%;
+            }
+        }
+        .card img {
+            max-width: 100%;
+            max-height: 80%;
+            object-fit: contain;
+        }
+        .card h2 {
+            margin: 0;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+<h1>Container Proxy Index</h1>
+<div class="cards-container">
+    {% for route in container_proxy_routes %}
+        <a class="card" href="{{ route.path }}">
+            <h2>{{ route.title | default(route.path) }}</h2>
+            {%  if route.icon is defined %}<img src="/icons/{{ route.icon | basename }}" alt="{{ route.title | default(route.path) }}" />{% endif %}
+        </a>
+    {% endfor %}
+</div>
+</body>
 </html>
