Add capabilities setting for nspawn container

--- a/roles/nspawn-host/templates/container.nspawn.j2
+++ b/roles/nspawn-host/templates/container.nspawn.j2
@@ -1,6 +1,9 @@
 [Exec]
 PrivateUsers=pick
 ResolvConf=bind-host
+{% if container.capabilities is defined %}
+Capability={{ container.capabilities | join(' ') }}
+{% endif %}
 
 [Network]
 VirtualEthernet=yes
