--- a/roles/container-proxy/templates/container-proxy.j2
+++ b/roles/container-proxy/templates/container-proxy.j2
@@ -6,17 +6,6 @@ map $http_upgrade $connection_upgrade {
 }
 {% endif %}
 
-{% for route in container_proxy_routes %}
-{% if route.type is defined and route.type == "pihole" %}
-map $upstream_http_location $replace_location_{{ route.path.replace('/', '') }} {
-	"" "";
-	"/admin/" "/pihole/";
-	"~^/(.*)$" "/pihole/$1";
-	"~^(.*)$" "/pihole/$1";
-}
-{% endif %}
-{% endfor %}
-
 server {
 	listen 80 default_server;
 	listen [::]:80 default_server;
@@ -46,14 +35,7 @@ server {
 {% elif _type == "pihole" %}
 	location {{ route.path }} {
 		proxy_pass {{ route.backend }};
-		proxy_set_header Host $host;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_hide_header X-Frame-Options;
-		proxy_set_header X-Frame-Options "SAMEORIGIN";
-		# we need to rewrite the location header pihole returns
-		proxy_hide_header Location;
-		add_header Location $replace_location_{{ route.path.replace('/', '') }};
+		rewrite  ^{{ route.path }}(.*)  /$1 break;
 	}
 {% elif _type == "grafana" %}
 	location {{ route.path.rstrip("/") }}/ {
